# Ros_Gitlab

./: README.md  dox_config.conf  run_all.sh
design/functional_flow_digram/: FFD.pptx
design/usecase_diagram/: UsecaseDiagram.pptx
devel/: .catkin  .rosinstall  setup.sh
devel/include/ros_ran_num_msg/: rand_num.h
devel/lib/pkgconfig/: ros_arithmetic.pc  ros_number_generator.pc  ros_ran_num_msg.pc
devel/lib/ros_arithmetic/: ros_arithmetic  ros_arithmetic_test
devel/lib/ros_number_generator/: ros_number_generator  ros_number_generator_test
devel/share/ros_arithmetic/cmake/: ros_arithmeticConfig.cmake
devel/share/ros_number_generator/cmake/: ros_number_generatorConfig.cmake
install/: _setup_util.py  setup.sh
install/lib/pkgconfig/: ros_ran_num_msg.pc
install/lib/ros_arithmetic/: ros_arithmetic
install/share/ros_number_generator/: package.xml
src/ros_arithmetic/: CMakeLists.txt  package.xml
src/ros_arithmetic/test/: number_arithmetic_test.cc
src/ros_number_generator/: CMakeLists.txt
src/ros_number_generator/launch/: ros_number_generator_multiplier.launch
src/ros_number_generator/test/: number_generator_test.cc
src/ros_ran_num_msg/: CMakeLists.txt  package.xml
src/ros_ran_num_msg/msg/: mutliplier_num.msg  rand_num.msg
test_reports/gcov/: coverage.html  coverage.src_ros_arithmetic_src_app_multiplier_arithmetic.cc.html  coverage.src_ros_arithmetic_src_app_multiplier_node.cc.html  coverage.src_ros_arithmetic_src_app_multiplier_node_handler.cc.html  coverage.src_ros_arithmetic_src_app_publish_subscriber.cc.html  coverage.src_ros_arithmetic_src_core_communication_factory.cc.html  coverage.src_ros_arithmetic_src_core_number_arithmetic_factory.cc.html  coverage.src_ros_arithmetic_test_number_arithmetic_test.cc.html  coverage.src_ros_number_generator_src_app_generator_node_handler.cc.html  coverage.src_ros_number_generator_src_app_number_generator_lcg.cc.html  coverage.src_ros_number_generator_src_app_number_generator_node.cc.html  coverage.src_ros_number_generator_src_app_number_generator_srand.cc.html  coverage.src_ros_number_generator_src_app_publish_subscriber.cc.html  coverage.src_ros_number_generator_src_core_communication_factory.cc.html  coverage.src_ros_number_generator_src_core_number_generator_factory.cc.html  coverage.src_ros_number_generator_test_number_generator_test.cc.html
(+53 files in other folders)
