<?xml version="1.0"?>
<package>
  <name>ros_ran_num_msg</name>
  <version>1.0.2</version>
  <description>The ros_ran_num_msg package contains message definitions
               for random value and multiplier output </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="tummala.sujeyendra@kpit.com">Sujeyendra Tummala</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="manish.shiralkar@example.com">Manish Shiralkar</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
